added additional js files and initial function outlines

--- a/highscores.html
+++ b/highscores.html
@@ -10,16 +10,15 @@
     </head>
 
     <body>
-        <section class="main-hs">
-            <div id="highscores-screen" class="highscores">
-                <h1>Highscores</h1>
-                <div id="score-initials" class="hide">
-                <button id="back">Go Back</button>
-                <button id="clear">Clear Highscores</button>
-            </div>
+        <section class="wrapper">
+            <h1>Highscores</h1>
+            <ol id="highscores"></ol>
+
+            <a href="index.html"><button>Go Back</button></a>
+            <button id="clear">Clear Highscores</button>
         </section>
 
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/scores.js"></script>
     
     </body>
 </html>
