--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div id="start-screen" class="start">
                 <h1>Coding Quiz Challenge</h1>
                 <p>
-                    Answer the quiz questions within the time limit. Any incorrect answers will detract from your score and reduce the amount of time left.
+                    Try to answer the following code-related questions within the time
+                    limit. Keep in mind that incorrect answers will penalize your
+                    score/time by 15 seconds!
                 </p>
                 <button id="start">Start Quiz</button>
             </div>
@@ -41,7 +43,8 @@
             <div id="feedback" class="feedback-hide"></div>
         </section>
     
-    <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/questions.js"></script>
+        <script src="./assets/js/logic.js"></script>
 
     </body>
 </html>
