--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
     <body>
         
-        <div class="scores"><a href="highscores.html">View Highscores</a></div>
-
-        <div class="timer">Time: <span id="time">0</span></div>
+        <header class="header">
+            <div class="scores"><a href="highscores.html">View Highscores</a></div>
+            <div class="timer">Time: <span id="time">0</span></div>
+        </header>
 
         <section class="wrapper">
             <div id="start-screen" class="start">
@@ -40,7 +41,7 @@
                 </p>
             </div>
 
-            <div id="feedback" class="feedback-hide"></div>
+            <div id="feedback" class="feedback hide"></div>
         </section>
     
         <script src="./assets/js/questions.js"></script>
